# polyclash

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPERS.md  Dockerfile  README.md  docker-compose.simple.yml  docker-compose.yml  fly.toml  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements-dev.txt  requirements-server.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  python-package.yml  tests.yml
docs/: 01_overview.md  02_installation.md  03_game_rules.md  04_architecture.md  05_client_implementation.md  06_server_implementation.md  07_ai_implementation.md  08_network_play.md  09_deployment.md  README.md
model3d/: cities.npz  snub_dodecahedron.npz  snub_dodecahedron.vtk  snub_dodecahedron_new.npz  snub_dodecahedron_new.vtk
plans/: README.md  phase1.3_mcts_implementation.md  phase1_testing.md  phase1_testing_revised.md  phase3.1_mcts_implementation.md  phase3_ai.md  roadmap.md  team-scenario.md
plans/implementation/: README.md  test_structure_reorganization.md
plans/phase1_foundation/: README.md  phase1_testing.md  phase1_testing_revised.md  phase1_testing_revised_update.md
plans/phase1_foundation/implementation/: 001_test_structure_reorganization.md  002_test_structure_reorganization_completed.md  003_core_game_logic_tests.md  004_ai_component_tests.md  README.md
plans/phase3_ai/: phase3.1_mcts_implementation.md  phase3_ai.md
polyclash/: api.py  board.py  cli.py  client.py  data.py  py.typed  server.py
polyclash/ai/: bridge.py
polyclash/ai/core/: game.py  mcts.py  neural.py  utils.py
polyclash/ai/nn/: __init__.py  common.py  graph_layers.py  hrm.py  layers.py  model.py  nnet.py  transformer.py
polyclash/ai/polyclash/: game_adapter.py  rules.py  state.py  topology.py
polyclash/api/: api.py
polyclash/client/: board.py  main.py
polyclash/data/: board.npz  board.pkl  coloring.py  data.py  five_elements.py  gen_board.py  gen_cities.py  gen_label.py  gen_mesh.py  index.pkl  sort.py  sort_chargers.py
polyclash/game/: board.py  controller.py  player.py  record.py  timer.py
polyclash/gui/: constants.py  dialogs.py  icons.py  main.py  mesh.py  mesh.vtk  overly_info.py  overly_map.py  view_sphere.py
polyclash/ui/: constants.py  dialogs.py  main.py  mesh.py  overly_info.py  overly_map.py  view_sphere.py
polyclash/ui/workers/: network.py
polyclash/util/: api.py  auth.py  logging.py  storage.py
polyclash/web/: index.html  lobby.html
polyclash/web/css/: lobby.css  style.css
polyclash/web/js/: board-renderer.js  game-client.js  i18n.js  lobby.js  main.js
polyclash/workers/: ai_play.py  network.py
scripts/: coloring.py  export_data.py  five_elements.py  gen_board.py  gen_cities.py  gen_mesh.py  reindex.py  run_tests.py  sort_chargers.py  sort_indexer.py
tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_board_persistence.py  test_data.py  test_integration.py  test_server.py  test_storage.py  test_team.py
tests/functional/: test_game_scenarios.py
tests/integration/: conftest.py  test_client_server.py  test_ui_logic.py
tests/performance/: test_ai_performance.py
tests/unit/: test_cli.py  test_client.py  test_coverage_gaps.py  test_server_complete.py
tests/unit/data/: test_data.py
tests/unit/game/: conftest.py  test_board.py  test_board_enhanced.py  test_board_enhanced2.py  test_board_enhanced3.py  test_controller.py  test_player.py  test_record.py  test_timer.py
tests/unit/gui/: conftest.py  test_dialogs.py  test_dialogs_extra.py  test_main.py  test_overlay_info.py  test_overlay_map.py  test_view_sphere.py
tests/unit/util/: test_api.py  test_api_complete.py  test_redis_storage.py  test_storage.py  test_storage_complete.py
tests/unit/workers/: test_ai_integration.py  test_ai_play.py  test_ai_play_step.py  test_ai_strategy.py  test_network.py
web/: index.html
web/css/: style.css
web/data/: board.json
web/js/: board-renderer.js  game-client.js  i18n.js  light-rules.js  lobby.js  main.js
