[tool.poetry]
name = "polyclash"
version = "0.0.1"
description = "A spherical go game on a snub dodecahedron framework"
authors = ["Mingli Yuan <mingli.yuan@gmail.com>"]
license = "MIT"
homepage = "https://github.com/spherical-go/polyclash"
repository = "https://github.com/spherical-go/polyclash"
readme = "README.md"

[tool.poetry.scripts]
polyclash-client = "polyclash.client:main"
polyclash-server = "polyclash.server:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
loguru = "^0.7.2"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
redis = "^5.0.4"
PyQt5 = "^5.15.10"
pyvista = "^0.43.7"
pyvistaqt = "^0.11.0"
requests = "^2.31.0"
python-socketio = "^5.11.2"

[tool.poetry.dev-dependencies]
numba = "^0.59.1"
networkx = "^3.3"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
