[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyclash"
version = "0.1.5"
description = "A python 3d spherical Go game on a snub dodecahedron board"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Mingli Yuan", email = "mingli.yuan@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Synchronized with requirements.txt
dependencies = [
  "numpy==2.3.3",
  "scipy==1.16.2",
  "requests==2.33.0",
  "python-socketio[client]==5.14.0",
  "flask>=3.1.3",
  "flask-socketio>=5.6.1",
  "loguru==0.7.3",
]

[project.optional-dependencies]
redis = [
  "redis==6.4.0",
]
# Synchronized with requirements-dev.txt (excluding commented-out lines)
dev = [
  "black",
  "isort",
  "ruff",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-benchmark",
  "pytest-asyncio",
  "pytest-flask",
]
ai = [
  "torch>=2.2",
  "einops>=0.7",
  "pydantic>=2.0",
  "safetensors>=0.4",
  "huggingface-hub>=0.20",
]

[project.scripts]
polyclash = "polyclash.cli:main"

[project.urls]
Homepage = "https://github.com/spherical-go/polyclash"
Documentation = "https://github.com/spherical-go/polyclash"
Source = "https://github.com/spherical-go/polyclash"
Tracker = "https://github.com/spherical-go/polyclash/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "model3d*", "scripts*", "bin*"]

[tool.setuptools.package-data]
polyclash = [
  "py.typed",
  "web/**/*",
]

[tool.mypy]
packages = ["polyclash"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "polyclash.ai.nn.layers"
disable_error_code = ["import-untyped", "no-redef", "attr-defined", "arg-type", "misc", "unused-ignore"]

[[tool.mypy.overrides]]
module = "polyclash.ai.nn.common"
disable_error_code = ["import-untyped", "unused-ignore"]

[[tool.mypy.overrides]]
module = "polyclash.ai.nn.nnet"
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
module = "polyclash.ai.nn.model"
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "polyclash.ai.polyclash.state"
disable_error_code = ["no-any-return"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Enable core error/warning rules
select = ["E", "F"]
# Let Black handle line length; ignore E501 globally to avoid conflicts.
ignore = ["E501"]
# Tests often use explicit True/False asserts and temporary unused variables; ignore them in tests.
per-file-ignores = { "tests/**" = ["E712", "F841"] }
